realizando la seccion de habilidades y depurando errores en el portafolio

--- a/index.html
+++ b/index.html
@@ -182,58 +182,45 @@
       <div class="w-100">
         <h2 class="mb-5">habilidades y conocimientos</h2>
 
-        <div class="subheading mb-3">Lenguajes &amp; herramientas</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
+        <div class="subheading mb-3">conocimiento en Lenguajes &amp; herramientas</div>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            MVC</li>
-        </ul>
+        <div class="container-skills mb-4">
+          <div class="bar expert" data-skill="HTML"></div> <i class="fab fa-2x fa-html5"></i>
+          <div class="bar expert" data-skill="CSS"></div> <i class="fab fa-2x fa-css3-alt"></i>
+          <div class="bar back advanced" data-skill="Javascript"></div> <i class="fab fa-2x fa-js-square"></i>
+          <div class="bar front intermediate" data-skill="Vue.js"></div> <i class="fab fa-2x fa-vuejs"></i>
+          <div class="bar front expert" data-skill="Boostrap"></div> <i class="fab fa-2x fa-bootstrap"></i>
+          <div class="bar back intermediate" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
+          <div class="bar front intermediate" data-skill="Laravel"></div> <i class="fab fa-2x fa-laravel" style="margin-left: -40px"></i>
+          <div class="bar front intermediate" data-skill="Bases de datos"></div> <i class="fa fa-2x fa-database"></i>
+          <div class="bar advanced" data-skill="GIT"></div> <i class="fab fa-2x fa-git-square"></i>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-6">
+            <div class="subheading mb-3">Aptitudes y Workflow</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                  <i class="fa-li fa fa-spell-check"></i>
+                  Inglés avanzado</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Mobile-First</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Responsive Design</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                MVC</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="subheading mb-3">otras herramientas manejadas</div>
+            <p class="tag pr-5" style="line-height: 2.8 !important"><span class="tag cuaternary">AJAX</span><span class="tag second">SASS</span>
+              <span class="tag cuaternary">JQUERY</span> <span class="tag tertiary">MySQL</span> <span class="tag tertiary">PostgreSQL</span>
+              <span class="tag second">LESS</span> <span class="tag second">GITHUB</span> <span class="tag second">SLACK</span>
+            </p>
+          </div>
       </div>
     </section>
 
@@ -279,6 +266,7 @@
                 </p>
               </div>
             </div>
+            <!-- Dormipuff store 
             <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                 <div class="portfolio-hover">
@@ -295,6 +283,7 @@
                 </p>
               </div>
             </div>
+            -->
             <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                 <div class="portfolio-hover">
@@ -456,7 +445,7 @@
     </div>
   </div>
 
-  <!-- Modal 3 -->
+  <!-- Modal 3 
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -490,6 +479,7 @@
       </div>
     </div>
   </div>
+  -->
 
   <!-- Modal 4 -->
   <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
