--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Xavier Basir - Desarrollador web</title>
 
-  <link rel="shortcut icon" href="assets/img/favicon.ico"/>
+  <link rel="shortcut icon" href="assets/img/favicon1.ico"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,9 +53,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portafolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Interéses</a>
         </li>
       </ul>
     </div>
@@ -192,7 +189,6 @@
           <div class="bar front expert" data-skill="Boostrap"></div> <i class="fab fa-2x fa-bootstrap"></i>
           <div class="bar back intermediate" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
           <div class="bar front intermediate" data-skill="Laravel"></div> <i class="fab fa-2x fa-laravel" style="margin-left: -40px"></i>
-          <div class="bar front intermediate" data-skill="Bases de datos"></div> <i class="fa fa-2x fa-database"></i>
           <div class="bar advanced" data-skill="GIT"></div> <i class="fab fa-2x fa-git-square"></i>
         </div>
         
@@ -359,20 +355,6 @@
         </div>
       </section>
     </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-      <div class="w-100">
-        <h2 class="mb-5">Interéses &amp; más</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Lorem ipsum</li>
-        </ul>
-      </div>
-    </section>
-
   </div>
 
   <!-- Modal 1 -->
