mejorando responsive y cambiando texto introductorio en la seccion de conoceme

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
         </div>
         <p class="lead mb-5 pr-5">Venezolano. 21 años de edad.
           Estudiante de Ing. Informática (carrera a fines). <br>
-          Persona responsable, con muchas ganas de seguir
-          aprendiendo y obteniendo experiencia en
-          tecnologías y herramientas en el área de desarrollo web</p>
+          Persona responsable, de rápido aprendizaje, con muchas ganas de seguir
+          aprendiendo tecnologías en el área de desarrollo web</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/xavier-alexandro-basir-jeffrey-4491b8171/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
