ajustes y mejoras en textos

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <a href="mailto:xavierfiv@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> xavierfiv@gmail.com</a>
         </div>
         <p class="lead mb-5 pr-5">Venezolano. 21 años de edad.
-          Estudiante de Ing. Informática (carrera a fines). <br>
+          Estudiante de Ing. Informática (carrera a fines, pendiente por trabajo de grado). <br>
           Persona responsable, de rápido aprendizaje, con muchas ganas de seguir
-          aprendiendo tecnologías en el área de desarrollo web</p>
+          aprendiendo sobre tecnologías en el área de desarrollo web</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/xavier-alexandro-basir-jeffrey-4491b8171/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -93,7 +93,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
         <div class="w-100">
-          <h2 class="mb-5">habilidades y conocimientos</h2>
+          <h2 class="mb-5">habilidades &amp; conocimientos</h2>
   
           <div class="subheading mb-3">conocimiento en Lenguajes &amp; herramientas</div>
   
@@ -102,7 +102,7 @@
             <div class="bar advanced first" data-skill="CSS"></div> <i class="fab fa-2x fa-css3-alt"></i>
             <div class="bar very-good second" data-skill="Javascript"></div> <i class="fab fa-2x fa-js-square"></i>
             <div class="bar intermediate tertiary" data-skill="Vue.js"></div> <i class="fab fa-2x fa-vuejs"></i>
-            <div class="bar expert tertiary" data-skill="Boostrap"></div> <i class="fab fa-2x fa-bootstrap"></i>
+            <div class="bar expert tertiary" data-skill="Bootstrap"></div> <i class="fab fa-2x fa-bootstrap"></i>
             <div class="bar intermediate second" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
             <div class="bar good tertiary" data-skill="Laravel"></div> <i class="fab fa-2x fa-laravel" style="margin-left: -40px"></i>
             <div class="bar great cuaternary" data-skill="GIT"></div> <i class="fab fa-2x fa-git-square"></i>
@@ -110,7 +110,7 @@
           
           <div class="row">
             <div class="col-md-6">
-              <div class="subheading mb-3">Aptitudes y Workflow</div>
+              <div class="subheading mb-3">Aptitudes &amp; Workflow</div>
               <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-spell-check"></i>
@@ -263,7 +263,7 @@
               </a>
               <div class="portfolio-caption">
                 <h4 class="text-uppercase"><a href="https://premusify.herokuapp.com/" target="_blank"><span class="font-weight-light text-muted">App</span> PREMUSIFY</a></h4>
-                <p class="tag "><span class="tag first">HTML</span><span class="tag first">CSS</span><span class="tag second">JS</span> <span class="tag tertiary">Bulma</span>
+                <p class="tag "><span class="tag first">HTML</span><span class="tag first">CSS</span><span class="tag second">JS</span> <span class="tag tertiary">BULMA</span>
                   <span class="tag tertiary">VUE.JS</span>
                 </p>
               </div>
