ampliando descripcion de proyectos en la seccion de portafolio

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Frontend</li>
                   <li>Destinatario: Imagina Colombia</li>
+                  <li>Tiempo aproximado de desarrollo: 60 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag first">PHP</span> <span class="tag tertiary">VUE.JS</span> <span class="tag tertiary">LARAVEL</span>
                   </p></li>
@@ -423,6 +424,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Frontend y Backend</li>
                   <li>Destinatario: Imagina Colombia</li>
+                  <li>Tiempo aproximado de desarrollo: 75 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag first">PHP</span><span class="tag tertiary">LARAVEL</span> <span class="tag cuaternary">AJAX</span>
                   </p></li>
@@ -494,6 +496,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Fullstack</li>
                   <li>Destinatario: Para prácticas</li>
+                  <li>Tiempo aproximado de desarrollo: 12 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag tertiary">VUE.JS</span>
                   </p></li>
@@ -529,6 +532,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Fullstack</li>
                   <li>Destinatario: Venprecar CA.</li>
+                  <li>Tiempo aproximado de desarrollo: 140 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag tertiary">LARAVEL</span><span class="tag tertiary">POSTGRESQL</span>
                     <span class="tag cuaternary">JQUERY</span>
@@ -565,6 +569,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Frontend</li>
                   <li>Destinatario: Imagina Colombia</li>
+                  <li>Tiempo aproximado de desarrollo: 35 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag tertiary">LARAVEL</span>
                   </p></li>
@@ -600,6 +605,7 @@
                 <ul class="list-inline">
                   <li>Contribución: Frontend</li>
                   <li>Destinatario: Imagina Colombia</li>
+                  <li>Tiempo aproximado de desarrollo: 30 horas</li>
                   <li class="font-weight-bold">Tecnologías utilizadas: <p class="tag "><span class="tag second">HTML</span><span class="tag second">CSS</span><span class="tag first">JS</span>
                     <span class="tag tertiary">LARAVEL</span> <span class="tag cuaternary">JQUERY</span>
                   </p></li>
