vista general en ingles

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <div class="bar intermediate second" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
             <div class="bar good tertiary" data-skill="Laravel"></div> <i class="fab fa-2x fa-laravel" style="margin-left: -40px"></i>
             <div class="bar great cuaternary" data-skill="GIT"></div> <i class="fab fa-2x fa-git-square"></i>
+            <div class="bar good cuaternary" data-skill="Bases de datos"></div> <i class="fa fa-2x fa-database"></i>
           </div>
           
           <div class="row">
@@ -630,7 +631,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="assets/js/bundle.js"></script>
+  <script src="js/resume.js"></script>
 
 </body>
 
