ajuste a niveles en habilidades

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="bar very-good second" data-skill="Javascript"></div> <i class="fab fa-2x fa-js-square"></i>
             <div class="bar intermediate tertiary" data-skill="Vue.js"></div> <i class="fab fa-2x fa-vuejs"></i>
             <div class="bar expert tertiary" data-skill="Bootstrap"></div> <i class="fab fa-2x fa-bootstrap"></i>
-            <div class="bar intermediate second" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
+            <div class="bar good second" data-skill="PHP"></div> <i class="fab fa-2x fa-php" style="margin-left: -40px"></i>
             <div class="bar good tertiary" data-skill="Laravel"></div> <i class="fab fa-2x fa-laravel" style="margin-left: -40px"></i>
             <div class="bar great cuaternary" data-skill="GIT"></div> <i class="fab fa-2x fa-git-square"></i>
             <div class="bar good cuaternary" data-skill="Bases de datos"></div> <i class="fa fa-2x fa-database"></i>
