linkeando las versiones en español e ingles

--- a/en/index.html
+++ b/en/index.html
@@ -60,6 +60,10 @@
 
   <div class="container-fluid p-0">
 
+    <div class="pt-4 pr-5" style="position: absolute; right: 0" >
+        <a href="https://xbasir.github.io/cv-portafolio" class="font-weight-bold">¿Hablas español? has clic aquí!</a>
+    </div>
+      
     <!-- Conóceme -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
