--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
   </nav>
 
   <div class="container-fluid p-0">
-
+    <div class="pt-4 pr-5" style="position: absolute; right: 0" >
+        <a href="https://xbasir.github.io/cv-portafolio/en/" class="font-weight-bold">SPEAK ENGLISH? CLICK HERE!</a>
+    </div>
+    
     <!-- Conóceme -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
